--- a/fedora23/Vagrantfile
+++ b/fedora23/Vagrantfile
@@ -2,13 +2,17 @@ Vagrant.configure("2") do |config|
   config.vm.box = "fedora/23-cloud-base"
   config.vm.box_check_update = false
   config.vm.network "private_network", ip: "192.168.88.101"
-  config.vm.synced_folder "D:", "/data"
+  config.vm.synced_folder "D:/", "/data"
   config.vm.synced_folder ".", "/vagrant", type:"virtualbox"
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "2048"
   end
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+    rm /etc/yum.repos.d/fedora*
+    curl -o /etc/yum.repos.d/fedora-updates-163.repo http://mirrors.163.com/.help/fedora-updates-163.repo
+    curl -o /etc/yum.repos.d/fedora-163.repo http://mirrors.163.com/.help/fedora-163.repo
+    dnf makecache
+    dnf update -y vim-minimal
+    dnf install -y vim wget git subversion golang
+  SHELL
 end
