--- a/fedora23/Vagrantfile
+++ b/fedora23/Vagrantfile
@@ -5,7 +5,8 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "D:/", "/data"
   config.vm.synced_folder ".", "/vagrant", type:"virtualbox"
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = "2048"
+    vb.memory = "1024"
+    vb.cpus = 1
   end
   config.vm.provision "shell", inline: <<-SHELL
     rm /etc/yum.repos.d/fedora*
@@ -13,6 +14,6 @@ Vagrant.configure("2") do |config|
     curl -o /etc/yum.repos.d/fedora-163.repo http://mirrors.163.com/.help/fedora-163.repo
     dnf makecache
     dnf update -y vim-minimal
-    dnf install -y vim wget git subversion golang
+    dnf install -y vim wget git subversion golang gcc gdb lsof telnet tcpdump
   SHELL
 end
