--- a/ubuntu16.04/Vagrantfile
+++ b/ubuntu16.04/Vagrantfile
@@ -5,6 +5,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "D:/", "/data"
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
+    vb.cpus = 1
   end
   config.vm.provision "shell", inline: <<-SHELL
 
