--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "typhoon-blade"]
 	path = typhoon-blade
-	url = git@github.com:chen3feng/typhoon-blade.git
+	url = git@github.com:xuguruogu/typhoon-blade.git
